fixed footer overflowing because of width 100vw instead of 100%

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,7 +2,7 @@
   background-color: black;
   color: white;
   margin: auto;
-  width: 100vw;
+  width: 100%;
   height: 209px;
 
   display: flex;
